--- a/.github/workflows/DevelopInBranch.yml
+++ b/.github/workflows/DevelopInBranch.yml
@@ -12,6 +12,8 @@ jobs:
           echo "Workflow triggered in branch '${{ github.ref }}'."
           echo "Workflow triggered by event '${{ github.event_name }}'."
           echo "Workflow triggered by actor '${{ github.actor }}''."
+
+      - run: echo "${{ github.event.pull_request.title }}"
           
       - run: |
           echo "::debug::This is a debug message."
